--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ nav{
 .nav-logo img{
     width: 100%;
 }
+.menu i{
+    display: none;
+}
 .menu ul{
     margin-right: 20px;
 }
@@ -164,4 +167,127 @@ footer h1,footer p{
 footer input{
     font-size: 30px;
     padding: 30px;  
+}
+@media screen and (max-width: 500px){
+    body{
+        margin: 0 25px;
+        padding: 0;
+        width: 500px;
+    }
+    .navbar-container{
+    width: 300px;
+    height: 55px;
+    float: center;
+    position: sticky;
+    top: 0;
+}
+    .navbar-container ul {
+        display: none;
+    }
+    .navbar-container i{
+        display: block;
+        margin-top: 15px;
+    }
+    .second-section-container{
+        width: 300px;
+        margin-left: 0;
+        height: auto;
+    }
+    .second-section-container .text h1{
+        width: 300px;
+        font-size: 35px;
+    }
+    .second-section-container .text p{
+        width: 300px;
+    }
+    .second-section-container .img{
+        width: 300px;
+        float: left;
+        margin: auto;
+        margin-top: 50px;
+    }
+    .card-section{
+        width: 300px;
+        margin: 0;
+    }
+    .card-section h2{
+        text-align: center;
+        margin: 30px auto;
+    }
+    .card-container{
+        width: 300px;
+        margin: 0;
+    }
+    .card-1, .card-2, .card-3{
+        width: 90%;
+        margin: 20px auto;
+    }
+    .card-3{
+        width: 90%;
+        margin: 0 0 50px 0;
+    }
+    .btn{
+        padding: 20px 25px;
+    }
+    .card-section .csh2{
+        margin: 30px 0;
+    }
+    .last-section{
+        width: 300px;
+        float: none;
+        margin: 0;
+    }
+    .last-section .ls-img-container .ls-img{
+        width: 300px;
+        margin: 0 auto;
+        float: left;
+    }
+    .lsimg{
+        margin: 50px auto;
+        width:300px;
+    }
+    .ls-container{
+        width: 300px;
+        height: auto;
+    }
+    .ls-container .ls-img{
+        float: none;
+        margin: 0 auto;
+    }
+    .lsimg{
+        height: 50%;
+    }
+    .ls-container .ls-text{
+        text-align: center;
+    }
+    .ls-1container, .ls-2container, .ls-3container{
+        height: auto;
+        margin-bottom: 20px;
+        border-radius: 5%;
+        box-shadow:0px 0 0 rgba(121, 116, 116, .5),0px 0 0 rgba(121, 116, 116, .5),0px 2px 10px rgba(121, 116, 116, .5),0 0 0 rgba(121, 116, 116, .5);
+    }
+    .footer-top{
+        float: left;
+        width: 300px;
+        margin: auto;
+        background-color: #FFFBF2;
+    }
+    .footer-top h1{
+        font-size: 30px;
+    }
+    footer input{
+        box-sizing: border-box;
+        width: 300px;
+        margin: 20px 0;
+        border-radius: 10px;
+        border: 1px solid red;  
+    }
+    footer .btn{
+        width: 300px;
+        padding: 20px 40px;
+    }
+    footer h5{
+        margin-top: 150px;
+        font-size: 15px;
+    }
 }
